Parser/test_cases/good/twoclasseswithonefield.cl
class Hello {
   foo: Int;
};

class Goodbye {
   foo: Int;
};
