Parser/test_cases/bad/recoverclass.cl
class Bad1 {
    Bad
};

class Good {
    x : Int <- 0;
};

class Bad2 {
    Bad
};
